<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/streamer_menu_login"
          android:title="@string/streamer_menu_login"
          android:icon="@drawable/ic_menu_login" />
    
    <item android:id="@+id/streamer_menu_tune"
          android:title="@string/streamer_menu_tune"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/streamer_menu_playlist"
          android:title="@string/streamer_menu_playlist"
          android:icon="@drawable/ic_menu_agenda"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/streamer_menu_test"
          android:title="@string/streamer_menu_test"/>
    
    <item android:id="@+id/streamer_menu_console"
          android:title="@string/console"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/streamer_menu_about"
          android:title="@string/streamer_menu_about"
          android:icon="@drawable/ic_menu_info_details"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/streamer_menu_close"
          android:title="@string/streamer_menu_close"
          android:icon="@android:drawable/ic_menu_close_clear_cancel" />
    
    
</menu>