<?xml version="1.0" encoding="utf-8"?>
<!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true" >
 -->
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" >

	    <EditText
	        android:id="@+id/editUrl"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/streamer_url"
	        android:inputType="text"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:visibility="gone" />

	    <FrameLayout
	        android:id="@+id/trackInfoFrame"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1" >

	        <ImageView
	            android:id="@+id/trackImage"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:contentDescription="@string/track_playing_content_desc"
	            android:scaleType="centerCrop" />

	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="bottom"
	            android:orientation="vertical" >

	            <TextView
	                android:id="@+id/textTitle"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_gravity="bottom"
	                android:gravity="right"
	                android:paddingLeft="10dp"
	                android:paddingRight="10dp"
	                android:text="@string/streamer_title"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:background="#80000000" />

	            <TextView
	                android:id="@+id/textAuthor"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="right"
	                android:paddingLeft="10dp"
	                android:paddingRight="10dp"
	                android:text="@string/streamer_author"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:background="#80000000" />

	            <TextView
	                android:id="@+id/textAlbum"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="right"
	                android:paddingLeft="10dp"
	                android:paddingRight="10dp"
	                android:text="@string/streamer_album"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:background="#80000000" />

	        </LinearLayout>
	    </FrameLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <ImageButton
	            android:id="@+id/buttonPlay"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight=".25"
	            android:contentDescription="@string/streamer_play_button"
	            android:src="@drawable/ic_media_play" />

	        <ImageButton
	            android:id="@+id/buttonPause"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight=".25"
	            android:contentDescription="@string/streamer_pause_button"
	            android:src="@drawable/ic_media_pause" />

	        <ImageButton
	            android:id="@+id/buttonStop"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight=".25"
	            android:contentDescription="@string/streamer_stop_button"
	            android:src="@drawable/ic_media_stop" />

	        <ImageButton
	            android:id="@+id/buttonNext"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight=".25"
	            android:contentDescription="@string/streamer_next_button"
	            android:src="@drawable/ic_media_next" />

	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <Button
	            android:id="@+id/buttonLove"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight=".25"
	            android:text="@string/streamer_love_button"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <Button
	            android:id="@+id/buttonUnlove"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight=".25"
	            android:text="@string/streamer_unlove_button"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <Button
	            android:id="@+id/buttonBan"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight=".25"
	            android:text="@string/streamer_ban_button"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <Button
	            android:id="@+id/buttonUnban"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight=".25"
	            android:text="@string/streamer_unban_button"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/textTimeProgress"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight=".5"
	            android:gravity="left"
	            android:text="@string/streamer_time_progress"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <TextView
	            android:id="@+id/textTime"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight=".5"
	            android:gravity="right"
	            android:text="@string/streamer_time"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	    </LinearLayout>

	    <SeekBar
	        android:id="@+id/seekProgress"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />

	</LinearLayout>

<!-- </ScrollView> -->